# AI-Learning

real_estate/: README.md  post.md  pyproject.toml
real_estate/real_estate/: social_dicussion.md
real_estate/src/real_estate/: crew.py  main.py
real_estate/src/real_estate/config/: agents.yaml  tasks.yaml
