[project]
name = "real_estate"
version = "0.1.0"
description = "real_estate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
real_estate = "real_estate.main:run"
run_crew = "real_estate.main:run"
train = "real_estate.main:train"
replay = "real_estate.main:replay"
test = "real_estate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
